[project]
name = "humetric-retrieval"
version = "0.1.0"
description = "Hybrid retrieval (BM25 + dense + graph + filters + RRF) for Humetric"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Po-Hsuan Lai" }]
dependencies = [
    "humetric-core>=0.1,<0.2",
    "humetric-store>=0.1,<0.2",
    "humetric-embed>=0.1,<0.2",
    "rank-bm25>=0.2.2,<1",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "ty>=0.0.35",
]

[tool.uv.sources]
humetric-core = { path = "../humetric-core", editable = true }
humetric-store = { path = "../humetric-store", editable = true }
humetric-embed = { path = "../humetric-embed", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humetric_retrieval"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF", "SIM", "TID"]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
